--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -3305,3 +3305,27 @@ font-size: 12px;
 	padding-top: 40px;
 padding-bottom: 40px;
 }
+
+
+.sidebar{
+	
+	position: fixed;
+top: 110px;
+bottom: 0;
+left: 0;
+z-index: 1000;
+display: block;
+padding: 30px;
+overflow-x: hidden;
+overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+background-color: #f5f5f5;
+border-right: 1px solid #eee;
+border-top: 1px solid #eee;
+}
+
+.nav > li > a#nopadding {
+	position: relative;
+	display: block;
+	padding: 5px 5px;
+	font-size: 10px;
+}
