--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -3329,3 +3329,61 @@ border-top: 1px solid #eee;
 	padding: 5px 5px;
 	font-size: 10px;
 }
+
+
+.fixed-navi {
+	position: fixed !important;
+	top:0px !important; 
+	z-index:999;
+}
+.fixed-sidebar{
+	position:fixed !important;
+	top:42px !important;
+	z-index:999;
+}
+
+.tutorial-nav{
+	background-color:#5f5f5f;
+	width:100%;
+	border-radius: 0px;
+	min-height:40px;
+}	
+
+.tutorial-nav > ul > li > a{
+	color:#f5f5f5 !important;
+	font-family:nanum gothic;
+}
+
+.tutorial-nav > ul > li > a:hover{
+	color:#000 !important;
+	font-family:nanum gothic;
+}
+
+.margin-bottom-zero{
+	
+	margin-bottom: 0px !important;
+}
+.tutorial-sidebar{
+	height: 100%;
+    position: absolute;
+    left: 0;
+    z-index: 1000;
+    display: block;
+    padding: 20px;
+    overflow-x: hidden;
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    background-color: #f5f5f5;
+    border-right: 1px solid #eee;
+}
+
+.right-margin-50{
+	margin-right:50px;
+}
+.left-margin-50{
+	margin-left:50px;
+}
+
+.tutorial-content-direction-btn-group{
+	margin-top:20px;
+	margin-bottom:80px;
+}
