--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1,6 +1,8 @@
 /*------------------------------------------------------------- 
                     GLOBAL STYLES
 ---------------------------------------------------------------*/
+
+
 @import url(http://fonts.googleapis.com/earlyaccess/hanna.css);
 
 @import url(http://fonts.googleapis.com/earlyaccess/jejugothic.css);
@@ -22,6 +24,13 @@
 		format('svg');
 	font-weight: normal;
 	font-style: normal;
+}
+
+@import url(http://weloveiconfonts.com/api/?family=zocial);
+
+/* zocial */
+[class*="zocial-"]:before {
+  font-family: 'zocial', sans-serif;
 }
 
 body, html {
