--- a/src/main/webapp/resources/css/flaticon.css
+++ b/src/main/webapp/resources/css/flaticon.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: "Flaticon";
-	src: url("flaticon.eot");
-	src: url("flaticon.eot#iefix") format("embedded-opentype"),
-	url("flaticon.woff") format("woff"),
-	url("flaticon.ttf") format("truetype"),
-	url("flaticon.svg") format("svg");
+	src: url("/resources/fonts/flaticon.eot");
+	src: url("/resources/fonts/flaticon.eot#iefix") format("embedded-opentype"),
+	url("/resources/fonts/flaticon.woff") format("woff"),
+	url("/resources/fonts/flaticon.ttf") format("truetype"),
+	url("/resources/fonts/flaticon.svg") format("svg");
 	font-weight: normal;
 	font-style: normal;
 }
