--- a/src/main/webapp/resources/css/bootstrap.css
+++ b/src/main/webapp/resources/css/bootstrap.css
@@ -2329,6 +2329,18 @@ fieldset[disabled] .btn-default.active {
   border-color: #357ebd;
 }
 
+.btn-exit {
+  color: #ffffff;
+  background-color: #ff8080;
+  border-color: #f24d4d;
+}
+
+.btn-break {
+  color: #000000;
+  background-color: #d3d3d3;
+  border-color: #ffffff;
+}
+
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary:active,
