--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -149,7 +149,7 @@ header {
 .navbar-brand {
 	color: white !important;
 	margin: 0;
-	font-size: 42px;
+	font-size: 60px;
 	font-family: hanna;
 	-webkit-transition: all .3s ease-in-out;
 	-moz-transition: all .3s ease-in-out;
@@ -158,7 +158,7 @@ header {
 }
 
 .navbar-brand.scroll {
-	color: black !important;
+	color: #2C3E50 !important;
 }
 
 .navbar-default .navbar-nav>li>a {
@@ -169,8 +169,23 @@ header {
 	font-weight: 700;
 }
 
+.nav-shadow{
+	
+	-webkit-box-shadow: 0px 6px 0px 0px rgba(189,195,199,1);
+-moz-box-shadow: 0px 6px 0px 0px rgba(189,195,199,1);
+box-shadow: 0px 6px 0px 0px rgba(189,195,199,1);
+}
+
+
+.blur-shadow{
+	-webkit-box-shadow: 0px 5px 14px 1px rgba(173,180,184,1);
+-moz-box-shadow: 0px 5px 14px 1px rgba(173,180,184,1);
+box-shadow: 0px 5px 14px 1px rgba(173,180,184,1);
+}
+
+
 .navbar-default .navbar-nav.scroll>li>a {
-	color: black !important;
+	color: #2C3E50 !important;
 }
 
 .navbar-default.scroll .navbar-nav>li>a {
@@ -257,18 +272,18 @@ header {
 }
 
 .btn-lite1 {
-	width: 160px;
+	width: 120px;
 	line-height: 50px;
 	text-align: center;
-	font-size: 15px;
-	color: #3a3a3a;
-	border: 2px solid #3a3a3a;
+	font-size: 20px;
+	color: #2C3E50;
+	border: 1px solid #2C3E50;
 	text-align: center;
 	border-radius: 5px;
-	background: #fff;
+	background: transparent;
 	display: table;
 	text-transform: uppercase;
-	margin: 40px auto 100px;
+	margin: 40px auto;
 	font-weight: 700;
 	-webkit-transition: all .3s ease-in-out;
 	-moz-transition: all .3s ease-in-out;
@@ -311,8 +326,10 @@ header {
 	/*background-color: gray;*/
 	background-color: rgba(0, 0, 0, 0.1);
 	background-size: 100% auto;
-	padding: 170px 0 350px;
+	max-height: 750px; min-height : 650px; padding-top : 100px; padding-bottom: 50px;
 	position: relative;
+	min-height: 550px;
+	padding-top: 90px;
 }
 
 .intro-regist.container {
@@ -374,16 +391,16 @@ header {
 ---------------------------------------------------------------*/
 .portfolio-wrap, .community-wrap {
 	/* background:#27ae60 url("../demo/wrappers/2.jpg") no-repeat center fixed; */
-	background-color: gray;
+	background-color: #ECF0F1;
 	background-size: 100% auto;
-	padding: 120px 0;
+	padding: 70px 0;
 	/*position:relative;*/
 	z-index: 1;
 }
 
 .portfolio-wrap h3, .community-wrap h3, .team-wrap h3, .pricing-wrap h3,
 	.news-wrap h3, .contact-wrap h3 {
-	color: #fff;
+	color: #2C3E50;
 	text-transform: uppercase;
 	margin: 0 0 15px;
 	text-align: center;
@@ -394,7 +411,7 @@ header {
 .portfolio-wrap p, .community-wrap p, .pricing-wrap p, .news-wrap p,
 	.contact-wrap p {
 	font-size: 22px;
-	color: white;
+	color: #2C3E50;
 	text-align: center;
 	line-height: 36px;
 	width: 50%;
@@ -404,7 +421,7 @@ header {
 
 .subtext {
 	font-size: 22px;
-	color: white;
+	color: 2C3E50;
 	text-align: center;
 	line-height: 36px;
 	width: 50%;
@@ -419,19 +436,19 @@ header {
 }
 
 .news-wrap h3 {
-	color: #393f4a;
+	color: #2C3E50;
 }
 
 .pricing-wrap p {
-	color: #8694af;
+	color: #2C3E50;
 }
 
 .news-wrap p {
-	color: #888c92;
+	color: #2C3E50;
 }
 
 .contact-wrap p {
-	color: #fff;
+	color: #2C3E50;
 }
 
 /*------------------------------------------------------------- 
@@ -725,27 +742,55 @@ font-weight: 100;
 /*------------------------------------------------------------- 
                     INFO STYLES
 ---------------------------------------------------------------*/
-.matching-info-wrap {
+.matching-info-wrap, .program-intro_wrap {
 	padding: 110px 0;
-	background: #fff;
+	background: #67809F;
 	position: relative;
+	-webkit-box-shadow: 0px 5px 14px 1px rgba(173,180,184,1);
+-moz-box-shadow: 0px 5px 14px 1px rgba(173,180,184,1);
+box-shadow: 0px 5px 14px 1px rgba(173,180,184,1);
+}
+
+.program-intro-wrap{
+	background: url("/resources/images/project_intro4.jpg") no-repeat center center fixed;
+
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+	padding: 110px 0;
 }
 
 .matching-info-content {
 	
 }
 
-.matching-info-content h4 {
-	font-size: 34px;
-	color: #393f4a;
-	font-family: Open sans;
+.matching-info-content h1{
+	font-size: 35px;
+	color: white;
+	font-family: seoulNamsan;
 	margin: 0 0 50px;
 }
 
+.program-intro-content h1 {
+	font-size: 50px;
+	color: white;
+	font-family: seoulNamsan;
+	margin: 0 0 50px;
+}
+
+.program-intro-content p{
+	font-size: 25px;
+	color: white;
+	line-height: 20px;
+	font-family: nanum gothic;
+	font-weight: 500px;
+}
+
 .matching-info-content p {
-	font-size: 16px;
-	color: #393f4a;
-	line-height: 28px;
+	font-size: 20px;
+	color: white;
+	line-height: 27px;
 }
 
 .btn-main {
@@ -800,7 +845,7 @@ font-weight: 100;
 ---------------------------------------------------------------*/
 .team-wrap {
 	/* background:#27ae60 url("../demo/wrappers/2.jpg") no-repeat center fixed; */
-	background-color: gray;
+	background-color: #ECF0F1;
 	background-size: 100% auto;
 	padding: 100px 0;
 	/*position:relative;*/
@@ -1131,7 +1176,7 @@ font-weight: 100;
 ---------------------------------------------------------------*/
 .contact-wrap {
 	padding: 120px 0;
-	background: #2980b9 url("../demo/wrappers/5.jpg") no-repeat center fixed;
+	background: #67809F;
 	background-size: 100% auto;
 	/*position:relative;*/
 	z-index: 1;
@@ -1179,7 +1224,7 @@ font-weight: 100;
 ---------------------------------------------------------------*/
 .contact-info {
 	padding: 90px 0 75px;
-	background: gray;
+	background: #67809F;
 	border-bottom: 1px solid #3c3c3c;
 	position: relative;
 }
@@ -1238,20 +1283,20 @@ font-weight: 100;
 }
 
 footer {
-	background: #2f2f2f;
-	padding: 35px 0;
+	background: #34495E;
+	padding: 50px 0;
 	position: relative;
 }
 
 footer p {
 	text-align: center;
-	color: #4f4f4f;
+	color: #ECF0F1;
 	font-size: 16px;
 	margin: 0;
 }
 
 footer p a {
-	color: #f8bc3b;
+	color: #ECF0F1;
 }
 
 footer p a:hover {
@@ -4274,4 +4319,8 @@ background-image: none;
 .readmore_btn{
 	font-size:20px;
 	font-family:seoulNamsan;
+}
+
+.welcome,.regist{
+	padding: 100px 0px 100px 0px;
 }
