--- a/src/main/webapp/resources/css/set2.css
+++ b/src/main/webapp/resources/css/set2.css
@@ -1,18 +1,42 @@
+button.btn.white.join-btn{
+	position: absolute;
+bottom: 20px;
+left: 100px;
+right: 100px;
+background-color: transparent;
+}
+button.btn.white.join-btn:hover {
+	color:blue !important;
+	border-color: blue !important;
+}
+
 /* Common style */
 figure {
 	position: relative;
 	float: left;
 	overflow: hidden;
 	margin: 10px 1%;
-	min-width: 370px;
-	max-width: 480px;
 	max-height: 285px;
 	min-height:285px;
-	width: 48%;
 	height: auto;
 	background: #3085a3;
 	text-align: center;
 	cursor: pointer;
+}
+
+.grup-count {
+	position: absolute;
+top:15px;
+right:20px;
+opacity: 1;
+font-size:13px;
+	
+}
+p.grup-count:hover{
+	position: absolute;
+	top:10px;
+	right:10px;
+	opacity: 1;
 }
 
 figure img {
@@ -56,11 +80,16 @@ figure figcaption > a {
 }
 
 figure h2 {
-	word-spacing: -0.15em;
-	font-weight: 300;
-	text-align: center;
-	 text-overflow: ellipsis; overflow: hidden; white-space: nowrap;
-	 font-family: nanum gothic;
+	
+	max-height:80px;
+word-spacing: -0.15em;
+font-weight: 300;
+
+text-align: center;
+text-overflow: ellipsis;
+overflow: hidden;
+font-family: nanum gothic;
+	line-height: 1.4;
 }
 
 figure h2 span {
@@ -70,7 +99,7 @@ figure h2 span {
 figure h2,
 figure p {
 	margin: 0;
-	margin-bottom: 5px;
+	margin-bottom: 2px;
 	 
 }
 
@@ -774,7 +803,7 @@ figure.effect-kira figcaption {
 figure.effect-kira p,figure.effect-kira div {
 	font-weight: 600;	
 	font-size: 100%;
-	line-height: 1.5;
+	line-height: 1.3;
 	opacity: 0;
 	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
 	transition: opacity 0.35s, transform 0.35s;
@@ -1081,7 +1110,7 @@ figure.effect-ming h2 {
 }
 
 figure.effect-ming p {
-	padding: 0.6em;
+	padding: 0.3em;
 	opacity: 0;
 	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
 	transition: opacity 0.35s, transform 0.35s;
