--- a/src/main/webapp/resources/css/style_login.css
+++ b/src/main/webapp/resources/css/style_login.css
@@ -19,7 +19,6 @@
 		url('/resources/fonts/SeoulNamsan/SeoulNamsan.woff2') format('woff2'),
 		url('/resources/fonts/SeoulNamsan/SeoulNamsan.woff') format('woff'),
 		url('/resources/fonts/SeoulNamsan/SeoulNamsan.ttf') format('truetype'),
-		url('/resources/fonts/SeoulNamsan/SeoulNamsan.svg#seoulnamsanregular')
 		format('svg');
 	font-weight: normal;
 	font-style: normal;
@@ -415,7 +414,7 @@ height:53px;
 	z-index: 1;
 }
 
-.portfolio-wrap h3, .community-wrap h3, .team-wrap h3, .pricing-wrap h3,
+.portfolio-wrap h3, .community-wrap h3, .pricing-wrap h3,
 	.news-wrap h3, .contact-wrap h3 {
 	color: #2C3E50;
 	text-transform: uppercase;
