커밋 목요일 2:46

--- a/src/main/webapp/resources/css/bootstrap.css
+++ b/src/main/webapp/resources/css/bootstrap.css
@@ -6001,6 +6001,10 @@ button.close {
   overflow-y: scroll;
 }
 
+.modal-lg{
+	width:900px !important;
+}
+
 .modal.fade .modal-dialog {
   -webkit-transform: translate(0, -25%);
       -ms-transform: translate(0, -25%);
@@ -7107,3 +7111,6 @@ td.visible-print {
     display: none !important;
   }
 }
+
+
+
